# work_for_test_2

./: README.md  env_example  pyproject.toml
config/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
