[tool.poetry]
name = "work-for-test-2"
version = "0.1.0"
description = "Тестовое задание"
authors = ["Александр"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
pillow = "^10.4.0"
ipython = "^8.26.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
